# IDEATE

./: .gitignore  README.md  batch_run.py  branch_from_run.py  pyproject.toml  requirements.txt
baselines/single_prompt_archive/: single_prompt_baseline.py
core/: archive.py  branch_context.py  creative_session.py  fixed_strategy.py  image_embedder.py  image_generator.py  prompts.py  resume_run.py  solution.py  utils.py
direct_prompting/: __init__.py  baseline_direct.py
langgraphs/: types.py  utils.py
langgraphs/archive_addition/: archive_addition_graph.py  prompts.py
langgraphs/blueprint_engineering/: blueprint_engineering_graph.py  prompts.py
langgraphs/competitor_identification/: competitor_identification_graph.py  prompts.py
langgraphs/evaluation/: pairwise_evaluation_graph.py  prompts.py
langgraphs/genotype_engineering/: genotype_engineering_graph.py  prompts.py
langgraphs/ideation/: ideation_graph.py  prompts.py
langgraphs/novelty_checking/: novelty_check_graph.py  prompts.py
langgraphs/strategising/: constraints_generation_graph.py  creative_strategy_graph.py  external_constraints_creative_strategy_graph.py  prompts.py  refine_creative_strategy_graph.py
new_core/adapters/: flux_adapter.py
new_core/archives/: in_memory_image_archive_store.py
new_core/composite_phases/: two_stage_solution_generation.py
new_core/embedders/: clip_image_embedder.py
new_core/interfaces/: archive_analyser.py  archive_store.py  competitor_identifier.py  constraints_generator.py  creative_strategist.py  ideator.py  image_embedder.py  (+5 more)
systems/: ideate.py
(+39 files in other folders)
